Latest changes before testing in IPA

--- a/srs_env_model_percp/CMakeLists.txt
+++ b/srs_env_model_percp/CMakeLists.txt
@@ -21,39 +21,31 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined services
 rosbuild_gensrv()
 
-# Kinect depth map segmentation node
-set( BUT_SEGMENTER_SOURCES src/but_seg_utils/segmenter_node.cpp
-                           src/but_seg_utils/filtering.cpp
-                           src/but_seg_utils/normals.cpp )
-rosbuild_add_executable( but_segmenter ${BUT_SEGMENTER_SOURCES} )
-
 # Plane detection node
-set( BUT_PLANE_DETECTOR_SOURCES src/but_plane_detector/plane_detector_node.cpp
-                                src/but_seg_utils/normals.cpp
-                                src/but_seg_utils/filtering.cpp 
+set( BUT_PLANE_DETECTOR_SOURCES src/but_plane_detector/plane_detector_node.cpp 
                                 src/but_plane_detector/parameter_space.cpp 
                                 src/but_plane_detector/parameter_space_hierarchy.cpp 
                                 src/but_plane_detector/scene_model.cpp 
                                 src/but_plane_detector/dyn_model_exporter.cpp )
 rosbuild_add_executable( but_plane_detector ${BUT_PLANE_DETECTOR_SOURCES} )
+target_link_libraries(but_plane_detector but_segmentation)
 
 # Plane detection node using pcl plane fitting
 set( BUT_PLANE_DETECTOR_RANSAC_SOURCES src/but_plane_detector/plane_detector_ransac_node.cpp
-                                src/but_seg_utils/normals.cpp
-                                src/but_seg_utils/filtering.cpp 
                                 src/but_plane_detector/parameter_space.cpp 
                                 src/but_plane_detector/parameter_space_hierarchy.cpp 
                                 src/but_plane_detector/scene_model.cpp 
                                 src/but_plane_detector/dyn_model_exporter.cpp )
 rosbuild_add_executable( but_plane_detector_ransac ${BUT_PLANE_DETECTOR_RANSAC_SOURCES} )
+target_link_libraries(but_plane_detector_ransac but_segmentation)
 
 # Kinect depth map to pcl converter node
 rosbuild_add_executable(but_kin2pcl src/but_seg_utils/kin2pcl_node.cpp)
-rosbuild_add_executable(but_kin2pcl src/but_seg_utils/normals.cpp)
+target_link_libraries(but_kin2pcl but_segmentation)
 
 # Kinect depth map to pcd exporter
 rosbuild_add_executable(but_pcd_exporter src/but_seg_utils/pcd_exporter_node.cpp)
-rosbuild_add_executable(but_pcd_exporter src/but_seg_utils/normals.cpp)
+target_link_libraries(but_pcd_exporter but_segmentation)
 
 # Bounding box estimator
 rosbuild_add_executable(bb_estimator_server src/bb_estimator/service_server.cpp src/bb_estimator/funcs.cpp )
