--- a/srs_knowledge/conf/ontologies/empty-map/empty-map.owl.in
+++ b/srs_knowledge/conf/ontologies/empty-map/empty-map.owl.in
@@ -16,8 +16,7 @@
      xmlns:owl="http://www.w3.org/2002/07/owl#"
      xmlns:xsd="http://www.w3.org/2001/XMLSchema#"
      xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-     xmlns:srs="http://www.srs-project.eu/ontologies/srs.owl#"
-     xmlns:empty-map="http://www.srs-project.eu/ontologies/empty-map.owl#">
+     xmlns:srs="http://www.srs-project.eu/ontologies/srs.owl#">
     <owl:Ontology rdf:about="http://www.srs-project.eu/ontologies/empty-map.owl">
       <owl:imports rdf:resource="file://@OWL_PATH_PREFIX@/conf/ontologies/srs.owl"/>
     </owl:Ontology>
