--- a/srs_env_model_percp/CMakeLists.txt
+++ b/srs_env_model_percp/CMakeLists.txt
@@ -22,10 +22,11 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 rosbuild_gensrv()
 
 
-# !!!
-rosbuild_add_library(but_segmentation src/but_segmentation/filtering.cpp src/but_segmentation/normals.cpp)
-rosbuild_add_openmp_flags(but_segmentation)
-
+# TODO: Link against official BUT packages!
+rosbuild_add_library( but_segmentation src/but_segmentation/filtering.cpp 
+                                       src/but_segmentation/normals.cpp )
+rosbuild_add_openmp_flags( but_segmentation )
+include_directories( include/srs_env_model_percp )
 
 # Plane detection node
 set( BUT_PLANE_DETECTOR_SOURCES src/but_plane_detector/plane_detector_node.cpp 
@@ -34,7 +35,18 @@ set( BUT_PLANE_DETECTOR_SOURCES src/but_plane_detector/plane_detector_node.cpp
                                 src/but_plane_detector/scene_model.cpp 
                                 src/but_plane_detector/dyn_model_exporter.cpp )
 rosbuild_add_executable( but_plane_detector ${BUT_PLANE_DETECTOR_SOURCES} )
-target_link_libraries(but_plane_detector but_segmentation)
+target_link_libraries( but_plane_detector but_segmentation )
+
+# Demo plane detection node
+set( BUT_SRS2_SOURCES src/but_plane_detector/plane_detector_demo_node.cpp 
+                      src/but_plane_detector/parameter_space.cpp 
+                      src/but_plane_detector/parameter_space_hierarchy.cpp 
+                      src/but_plane_detector/scene_model.cpp 
+                      src/but_plane_detector/dyn_model_exporter.cpp
+                      src/but_plane_detector/dyn_model_exporter2.cpp )
+rosbuild_add_executable( but_plane_detector_demo ${BUT_SRS2_SOURCES} )
+target_link_libraries( but_plane_detector_demo but_segmentation )
+
 
 # Plane detection node using pcl plane fitting
 set( BUT_PLANE_DETECTOR_RANSAC_SOURCES src/but_plane_detector/plane_detector_ransac_node.cpp
@@ -43,7 +55,8 @@ set( BUT_PLANE_DETECTOR_RANSAC_SOURCES src/but_plane_detector/plane_detector_ran
                                 src/but_plane_detector/scene_model.cpp 
                                 src/but_plane_detector/dyn_model_exporter.cpp )
 rosbuild_add_executable( but_plane_detector_ransac ${BUT_PLANE_DETECTOR_RANSAC_SOURCES} )
-target_link_libraries(but_plane_detector_ransac but_segmentation)
+target_link_libraries( but_plane_detector_ransac but_segmentation )
+
 
 # Kinect depth map to pcl converter node
 rosbuild_add_executable(but_kin2pcl src/but_seg_utils/kin2pcl_node.cpp)
@@ -53,9 +66,11 @@ target_link_libraries(but_kin2pcl but_segmentation)
 rosbuild_add_executable(but_pcd_exporter src/but_seg_utils/pcd_exporter_node.cpp)
 target_link_libraries(but_pcd_exporter but_segmentation)
 
+
 # Bounding box estimator
 rosbuild_add_executable(bb_estimator_server src/bb_estimator/service_server.cpp src/bb_estimator/funcs.cpp )
 rosbuild_add_executable(bb_estimator_client src/bb_estimator/sample_client.cpp)
+
 
 #common commands for building c++ executables and libraries
 #rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
