--- a/srs_interaction_primitives/CMakeLists.txt
+++ b/srs_interaction_primitives/CMakeLists.txt
@@ -10,6 +10,10 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
+rosbuild_find_ros_package(actionlib_msgs)
+include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
+genaction()
+
 rosbuild_init()
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -20,6 +24,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 rosbuild_genmsg()
 #uncomment if you have defined services
 rosbuild_gensrv()
+
 
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -35,15 +40,18 @@ set( INTERACTION_PRIMITIVES_SOURCE_FILES
      src/interaction_primitives/plane_polygon.cpp
      src/interaction_primitives/object.cpp
      src/interaction_primitives/unknown_object.cpp
-     src/interaction_primitives/update_publisher.cpp )
+     src/interaction_primitives/update_publisher.cpp
+     src/clickable_positions/clickable_positions.cpp )
 
 set( INTERACTION_PRIMITIVES_LIB_NAME but_interaction_primitives )
 rosbuild_add_library( ${INTERACTION_PRIMITIVES_LIB_NAME} ${INTERACTION_PRIMITIVES_SOURCE_FILES} )
 
 rosbuild_add_executable( interaction_primitives_service_server src/nodes/service_server.cpp )
+rosbuild_add_executable( clickable_positions_action_server src/nodes/clickable_positions_action_server.cpp )
 rosbuild_add_executable( test_primitives src/test/test_primitives.cpp )
 rosbuild_add_executable( test_observers src/test/test_observers.cpp )
 
 target_link_libraries( interaction_primitives_service_server ${INTERACTION_PRIMITIVES_LIB_NAME} )
+target_link_libraries( clickable_positions_action_server ${INTERACTION_PRIMITIVES_LIB_NAME} )
 target_link_libraries( test_primitives ${INTERACTION_PRIMITIVES_LIB_NAME} )
 target_link_libraries( test_observers ${INTERACTION_PRIMITIVES_LIB_NAME} )
