--- a/srs_env_model/config/environment_server_defaults.yaml
+++ b/srs_env_model/config/environment_server_defaults.yaml
@@ -5,30 +5,33 @@
 # Octomap plugin
 
 # Octomap resolution
-ocmap_resolution: 0.1
+ocmap_resolution: 0.1;
 
 # Tree depth used for crawling. Zero means full tree
-ocmap_treedepth: 0
+ocmap_treedepth: 0;
+
+# Interna and published octomap frame id
+ocmap_frame_id: "/map";
 
 # Probablility for a "hit" - or "occupied" (will be converted to logodds)
-ocmap_sensor_model/hit: 0.7
+ocmap_sensor_model/hit: 0.7;
 
 # Probablility for a "miss" - or "free" (will be converted to logodds)
-ocmap_sensor_model/miss: 0.4
+ocmap_sensor_model/miss: 0.4;
 
 # Probability threshold - if value of the node reaches this value, node is marked
 # as "stable" and can be compressed
-ocmap_sensor_model/min: 0.12
+ocmap_sensor_model/min: 0.12;
 
 # Probability threshold - if value of the node reaches this value, node is marked
 # as "stable" and can be compressed
-ocmap_sensor_model/max: 0.97
+ocmap_sensor_model/max: 0.97;
 
 # Maximum range for raycasting (-1: unlimited)
-ocmap_max_range: -1
+ocmap_max_range: 7;
 
 # Debugging information - visualize visible cone marker
-ocmap_visualize_markers: false
+ocmap_visualize_markers: false;
 
 # Filter ground plane?
 ocmap_filter_ground: false;
@@ -48,29 +51,99 @@ ocmap_filter_outdated: true;
 ###############################################################################
 # Point cloud plugin
 
+# Input frames (clouds) skipping - use every n-th input message
+pointcloud_frame_skip: 5;
+
+# Internal and published pointcloud frame id
+pointcloud_frameid: "/head_cam3d_link";
+
+# Point cloud limits in z-axis - minimum
+pointcloud_min_z: -1000000.0 ;
+
+# Point cloud limits in z-axis - maximum
+pointcloud_max_z:  1000000.0;
+
+
 ###############################################################################
 # Point cloud plugin - registration
 
+# Common parameters
+
+# Maximum iterations
+registration_maximum_iterations: 5;
+
+# RANSAC outlier threshold
+registration_ransac_outlier_rejection_threshold: 0.05;
+
+# Maximal correspondence distance
+registration_maximal_correspondence_distance: 100000000.0;
+
+# Transformation epsilon
+registration_transformation_epsilon: 0.0;
+
+# SCA parameters
+
+# Minimum distances between samples
+registration_sca_min_sample_distance: 0.0;
+
+# Number of samples to use during each iteration.
+registration_sca_num_of_samples: 3;
+
+# Number of neighbors to use when selecting a random feature correspondence
+m_scaCorrespondenceRamdomness: 10;
+
 ###############################################################################
-# Collision map plugins
+# Collision map plugin
+
+# Get collision map radius
+collision_map_radius: 2.0;
+
+# Internal and published collision map frame id
+collision_map_frame_id: "/base_footprint";
 
 ###############################################################################
 # Collision objects plugin
 
+# Internal and published frame id
+collision_object_frame_id: "/map";
+
 ###############################################################################
-# Compressed point cloud plugin
+# Compressed point cloud plugin 
+# - the same parameters as point cloud plugin and:
+
+# How many differential frames should be published before full cloud
+compressed_pc_differential_frames_count: 5;
+
+# Stereo camera parameters - left camera offset
+compressed_pc_camera_stereo_offset_left: 0;
+
+# Stereo camera parameters - right camera offset
+compressed_pc_camera_stereo_offset_right: 0;
 
 ###############################################################################
 # Interactive markers plugin
 
 ###############################################################################
 # Limited point cloud plugin
+# - the same parameters as point cloud plugin and:
 
 ###############################################################################
 # 2D map plugin
 
+# Internal and published frame id
+map2d_frame_id: "/map";
+
+# Minimal map size in x
+map2d_min_x_size: 0.0;
+
+# Minimal map size in y
+map2d_min_y_size: 0.0;
+
 ###############################################################################
 # Marker array plugin
+
+# Internal and published frame id
+marker_array_frame_id: "/map";
 
 ###############################################################################
 # Objtree plugin
