Collision grid plugin, rviz camera position published as tf.

--- a/srs_env_model/CMakeLists.txt
+++ b/srs_env_model/CMakeLists.txt
@@ -35,6 +35,7 @@ set( SERVER_SOURCES src/but_server/but_server.cpp
                     src/but_server/plugins/point_cloud_plugin.cpp
                     src/but_server/plugins/collision_object_plugin.cpp
                     src/but_server/plugins/map2d_plugin.cpp
+                    src/but_server/plugins/collision_grid_plugin.cpp
                     src/but_server/plugins/imarkers_plugin.cpp
                     src/but_server/plugins/marker_array_plugin.cpp
                     src/but_server/plugins/limited_point_cloud_plugin.cpp
