PCL frame_id parameter renamed in the yaml file

--- a/srs_env_model/config/environment_server_robot.yaml
+++ b/srs_env_model/config/environment_server_robot.yaml
@@ -56,7 +56,7 @@ ocmap_filter_outdated: true
 pointcloud_frame_skip: 1
 
 # Internal and published pointcloud frame id
-pointcloud_frameid: "/head_cam3d_link"
+pointcloud_frame_id: "/head_cam3d_link"
 
 # Point cloud limits in z-axis - minimum
 pointcloud_min_z: 0.1
