--- a/srs_env_model_percp/CMakeLists.txt
+++ b/srs_env_model_percp/CMakeLists.txt
@@ -33,19 +33,36 @@ set( BUT_PLANE_DETECTOR_SOURCES src/but_plane_detector/plane_detector_node.cpp
                                 src/but_plane_detector/parameter_space.cpp 
                                 src/but_plane_detector/parameter_space_hierarchy.cpp 
                                 src/but_plane_detector/scene_model.cpp 
-                                src/but_plane_detector/dyn_model_exporter.cpp )
+                                src/but_plane_detector/dyn_model_exporter2.cpp
+                                src/but_plane_detector/polypartition.cpp 
+                                src/but_plane_detector/clipper.cpp
+                      			src/but_plane_detector/plane.cpp )
 rosbuild_add_executable( but_plane_detector ${BUT_PLANE_DETECTOR_SOURCES} )
-target_link_libraries( but_plane_detector but_segmentation )
+target_link_libraries(but_plane_detector but_segmentation)
 
-# Demo plane detection node
-set( BUT_SRS2_SOURCES src/but_plane_detector/plane_detector_demo_node.cpp 
-                      src/but_plane_detector/parameter_space.cpp 
-                      src/but_plane_detector/parameter_space_hierarchy.cpp 
-                      src/but_plane_detector/scene_model.cpp 
-                      src/but_plane_detector/dyn_model_exporter.cpp
-                      src/but_plane_detector/dyn_model_exporter2.cpp )
-rosbuild_add_executable( but_plane_detector_demo ${BUT_SRS2_SOURCES} )
-target_link_libraries( but_plane_detector_demo but_segmentation )
+#set( BUT_SRS1_SOURCES src/but_plane_detector/tb_workshop_test1_node.cpp 
+#                      src/but_plane_detector/parameter_space.cpp 
+#                      src/but_plane_detector/parameter_space_hierarchy.cpp 
+#                     src/but_plane_detector/scene_model.cpp 
+#                     src/but_plane_detector/dyn_model_exporter.cpp
+#                      src/but_plane_detector/dyn_model_exporter2.cpp
+#                      src/but_plane_detector/polypartition.cpp
+#                      src/but_plane_detector/clipper.cpp
+#                      src/but_plane_detector/plane.cpp )
+#rosbuild_add_executable( but_tb_test_1 ${BUT_SRS1_SOURCES} )
+#target_link_libraries(but_tb_test_1 but_segmentation)
+
+#set( BUT_SRS2_SOURCES src/but_plane_detector/tb_workshop_test2_node.cpp 
+#                      src/but_plane_detector/parameter_space.cpp 
+#                      src/but_plane_detector/parameter_space_hierarchy.cpp 
+#                      src/but_plane_detector/scene_model.cpp 
+#                      src/but_plane_detector/dyn_model_exporter.cpp
+#                      src/but_plane_detector/dyn_model_exporter2.cpp
+#                      src/but_plane_detector/polypartition.cpp 
+#                      src/but_plane_detector/clipper.cpp 
+#                      src/but_plane_detector/plane.cpp)
+#rosbuild_add_executable( but_tb_test_2 ${BUT_SRS2_SOURCES} )
+#target_link_libraries(but_tb_test_2 but_segmentation)
 
 
 # Plane detection node using pcl plane fitting
@@ -55,8 +72,7 @@ set( BUT_PLANE_DETECTOR_RANSAC_SOURCES src/but_plane_detector/plane_detector_ran
                                 src/but_plane_detector/scene_model.cpp 
                                 src/but_plane_detector/dyn_model_exporter.cpp )
 rosbuild_add_executable( but_plane_detector_ransac ${BUT_PLANE_DETECTOR_RANSAC_SOURCES} )
-target_link_libraries( but_plane_detector_ransac but_segmentation )
-
+target_link_libraries(but_plane_detector_ransac but_segmentation)
 
 # Kinect depth map to pcl converter node
 rosbuild_add_executable(but_kin2pcl src/but_seg_utils/kin2pcl_node.cpp)
