New camera control plugin for Rviz

--- a/srs_ui_but/CMakeLists.txt
+++ b/srs_ui_but/CMakeLists.txt
@@ -53,6 +53,7 @@ set( DISPLAY_SOURCE_FILES src/but_display/but_display.cpp
                           src/but_display/point_cloud_base.cpp
                           src/but_display/example_pane.cpp
                           src/but_display/octomap_control_pane.cpp
+                          src/but_display/camera_control_pane.cpp
                           src/but_display/but_distance_linear_visualizer.cpp
                           src/but_display/but_distance_circular_indicator.cpp
                           src/but_display/but_cob_stretch_indicator.cpp
