--- a/srs_env_model/config/environment_server_robot.yaml
+++ b/srs_env_model/config/environment_server_robot.yaml
@@ -6,6 +6,7 @@
 
 # Octomap resolution
 ocmap_resolution: .05
+#ocmap_resolution: .025
 
 # Tree depth used for crawling. Zero means full tree
 ocmap_treedepth: 0
@@ -59,10 +60,10 @@ pointcloud_frame_skip: 1
 pointcloud_frame_id: "/head_cam3d_link"
 
 # Point cloud limits in z-axis - minimum
-pointcloud_min_z: 0.1
+pointcloud_min_z: 0.1 
 
 # Point cloud limits in z-axis - maximum
-pointcloud_max_z:  2.5
+pointcloud_max_z: 2.5
 
 
 ###############################################################################
@@ -76,18 +77,19 @@ pointcloud_max_z:  2.5
 # "icpnl" - use nonlinear ICP algorithm
 # "sca" - use sample consensus alignment
 registration_mode: "none"
+#registration_mode: "icp"
 
 # Maximum iterations
-registration_maximum_iterations: 5
+registration_maximum_iterations: 20
 
 # RANSAC outlier threshold
-registration_ransac_outlier_rejection_threshold: .05
+registration_ransac_outlier_rejection_threshold: .02
 
 # Maximal correspondence distance
-registration_maximal_correspondence_distance: 100000000.0
+registration_maximal_correspondence_distance: 5.0
 
 # Transformation epsilon
-registration_transformation_epsilon: 0.0
+registration_transformation_epsilon: 0.1
 
 # SCA parameters
 
@@ -99,6 +101,19 @@ registration_sca_num_of_samples: 3
 
 # Number of neighbors to use when selecting a random feature correspondence
 m_scaCorrespondenceRamdomness: 10
+
+# As a point cloud that is registered to is generated one from the octomap.
+# Part visible from robot camera is taken. As an addition, voxels out of the view
+# frustum can be used too. This parameter desribes "scaling" of frustum. 
+# Default value means use whole frustum and half of half (1 + 2*0.25 = 1.5) on both sides. 
+registration_patch_view_fraction_x: 1.0
+
+# The same as before, but in y axis (x and y axis is related to the robot camera
+# coordinate system)
+registration_patch_view_fraction_y: 1.0
+
+# Patch cloud creation - should be patch cloud published? (f.e. for debug purposes)
+registration_patch_publish_cloud: true 
 
 ###############################################################################
 # Collision map plugin
@@ -120,7 +135,7 @@ collision_object_frame_id: "/map"
 # - the same parameters as point cloud plugin and:
 
 # How many differential frames should be published before full cloud
-compressed_pc_differential_frames_count: 10
+compressed_pc_differential_frames_count: 5
 
 # Stereo camera parameters - left camera offset
 compressed_pc_camera_stereo_offset_left: 0
@@ -155,4 +170,5 @@ marker_array_frame_id: "/map"
 
 ###############################################################################
 # Objtree plugin
+
 
