--- a/srs_assisted_grasping_ui/config/presets.yaml
+++ b/srs_assisted_grasping_ui/config/presets.yaml
@@ -21,3 +21,13 @@ presets:
   forces: [900.0, 900.0, 900.0, 900.0, 900.0, 900.0]
   target_pos: [0.0, 0.0, 1.0472, 0.0, 1.0472, 0.0, 1.0472] # cylclosed
   time: 6.0
+ -
+  name: Sphere gr., empty
+  forces: [300.0, 300.0, 300.0, 300.0, 300.0, 300.0]
+  target_pos: [1.047,-0.262,1.047,-0.262,1.047,-0.262,1.047] # sphere closed
+  time: 6.0
+ -
+  name: Sphere gr., full
+  forces: [900.0, 900.0, 900.0, 900.0, 900.0, 900.0]
+  target_pos: [1.047,-0.262,1.047,-0.262,1.047,-0.262,1.047] # sphere closed
+  time: 6.0
