--- a/srs_assisted_arm_navigation/config/self_filter.yaml
+++ b/srs_assisted_arm_navigation/config/self_filter.yaml
@@ -2,10 +2,10 @@ min_sensor_dist: .05
 self_see_default_padding: .00
 self_see_default_scale: 1.0
 self_see_links:
-  - name: arm_0_link
-    padding: .15
-  - name: arm_1_link
-    padding: .15
+#  - name: arm_0_link
+#    padding: .15
+#  - name: arm_1_link
+#    padding: .15
   - name: arm_2_link
     padding: .15
   - name: arm_3_link
@@ -19,20 +19,20 @@ self_see_links:
   - name: arm_7_link
     padding: .15
   - name: sdh_palm_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_11_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_12_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_13_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_21_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_22_link
-    padding: .08
+    padding: .12
   - name: sdh_finger_23_link
-    padding: .08
+    padding: .12
   - name: sdh_thumb_1_link
-    padding: .08
+    padding: .12
   - name: sdh_thumb_2_link
-    padding: .08
+    padding: .12
