--- a/srs_assisted_arm_navigation_ui/CMakeLists.txt
+++ b/srs_assisted_arm_navigation_ui/CMakeLists.txt
@@ -46,4 +46,6 @@ include_directories( ${wxWidgets_INCLUDE_DIRS} )
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 
+rosbuild_add_executable(statevis src/state_vis.cpp)
+
 rosbuild_add_roslaunch_check(launch)
