--- a/srs_env_model/config/environment_server_defaults.yaml
+++ b/srs_env_model/config/environment_server_defaults.yaml
@@ -137,6 +137,15 @@ collision_object_frame_id: "/map"
 # Compressed point cloud plugin 
 # - the same parameters as point cloud plugin and:
 
+# Camera info topic
+compressed_pc_camera_info_topic_name: "camera_info"
+
+# Simple dfferential pointcloud topic name 
+compressed_pc_pointcloud_centers_publisher: "/but_env_model/differential_pointcloud_centers"
+
+# Should simple cloud (without camera position) be published too?
+publish_simple_cloud: false
+
 # How many differential frames should be published before full cloud
 compressed_pc_differential_frames_count: 5
 
@@ -145,6 +154,7 @@ compressed_pc_camera_stereo_offset_left: 0
 
 # Stereo camera parameters - right camera offset
 compressed_pc_camera_stereo_offset_right: 0
+
 
 ###############################################################################
 # Interactive markers plugin
