--- a/srs_env_model_percp/config/planedet_params_robot.yaml
+++ b/srs_env_model_percp/config/planedet_params_robot.yaml
@@ -17,10 +17,10 @@ original_frame: /head_cam3d_link
 planedet_ht_keep_track: 1
 
 # Maximum depth in meters to count with (for real data, 3.0 is recommended)
-planedet_ht_maxdepth: 5.0
+planedet_ht_maxdepth: 100.0
 
 # Maximum height in meters to be considered
-planedet_ht_max_height: 2.5
+planedet_ht_max_height: 3.0
 
 # Minimum height in meters to be considered
 planedet_ht_min_height: 0.1
@@ -35,7 +35,7 @@ planedet_ht_maxshift: 40.0
 planedet_ht_angle_res: 512
 
 # HS shift axis resolution
-planedet_ht_shift_res: 4096
+planedet_ht_shift_res: 2048
 
 # HS Gauss smoothing angle kernel size
 planedet_ht_gauss_angle_res: 11
@@ -50,8 +50,7 @@ planedet_ht_gauss_angle_sigma: 0.04
 planedet_ht_gauss_shift_sigma: 0.15
 
 # Merge planes with shift difference less than
-#planedet_ht_plane_merge_shift: 0.1
-planedet_ht_plane_merge_shift: 0.3
+planedet_ht_plane_merge_shift: 0.1
 
 # Merge planes with angle difference less than
 planedet_ht_plane_merge_angle: 0.5
@@ -70,14 +69,15 @@ planedet_ht_lvl1_gauss_shift_sigma: 5.0
 
 # HS minimal point count to be considered for computation (warning, big speed effect) 
 planedet_ht_min_smooth: 10
-#planedet_ht_min_smooth: 30
+
+# Number of HS node substraction after each step
+planedet_ht_step_substraction: 0.0
 
 #-----------------------------------------------------------------------------------
 # PLANE SEARCH PARAMS 
 # 
 # Minimum number of points forming a plane in one frame
-#planedet_search_minimum_current_space: 2000.0
-planedet_search_minimum_current_space: 500.0
+planedet_search_minimum_current_space: 2000.0
 
 # Minimum signature in global HS for detected plane
 planedet_search_minimum_global_space: 1.5
@@ -101,8 +101,28 @@ planedet_visualisation_plane_normal_dev: 0.5
 planedet_visualisation_plane_shift_dev: 0.1
 
 # Minimal point count for visualised plane
-#planedet_visualisation_min_count: 2000
-planedet_visualisation_min_count: 500
+planedet_visualisation_min_count: 2000
 
 # Color creation method (plane_eq / mean_color / centroid / random)
-planedet_visualisation_color: mean_color
+planedet_visualisation_color : mean_color
+
+# Plane visualisation time-to-live (sec), if 0, planes are permanent
+planedet_visualisation_ttl : 0
+
+#-----------------------------------------------------------------------------------
+# NORMAL ESTIMATION PARAMS 
+# 
+# Normal estimation type (1 - direct, 2 - LSQ, 4 - LSQ only around, 8 - LTS, 16 - LTS around, 32 - PCL) 
+planedet_normal_type: 32;
+
+# Neighborhood to be considered with (half of the window)
+planedet_normal_neighborhood: 15
+
+# Depth threshold to not consider the point 
+planedet_normal_threshold:  0.2
+
+# Outlier threshold for LTS method
+planedet_normal_outlierThreshold: 0.02
+
+# Max iteration count form LTS method 
+planedet_normal_iter: 3
