moved bag_logger to srs_user_tests

--- a/srs_user_tests/ros/config/bag_record.yaml
+++ b/srs_user_tests/ros/config/bag_record.yaml
@@ -1,5 +1,6 @@
-bag_name: test1.bag
+bag_name: test13
 record_timestep: 10
+record_timestep_tf: 1
 trigger_record_translation: 0.1
 trigger_record_rotation: 0.2
 wanted_topics: [/tf, /joint_states, /stereo/left/image_color, /stereo/right/image_color, /stereo/left/camera_info, /stereo/right/camera_info, /cam3d/rgb/points, /map, /scan_front, /scan_rear, /scan_top]
