--- a/srs_user_tests/ros/config/bag_record.yaml
+++ b/srs_user_tests/ros/config/bag_record.yaml
@@ -4,7 +4,7 @@ continuous_topics: [/tf, /joint_states]
 
 ################
 # triggered recording
-trigger_topics: [/stereo/left/image_color, /stereo/right/image_color, /stereo/left/camera_info, /stereo/right/camera_info, /cam3d/rgb/points, /map, /scan_front, /scan_rear, /scan_top]
+trigger_topics: [/stereo/left/image_color, /stereo/right/image_color, /stereo/left/camera_info, /stereo/right/camera_info, /cam3d/depth_registered/points, /map, /scan_front, /scan_rear, /scan_top]
 
 # setup time trigger
 trigger_timestep: 10
