--- a/srs_env_model/config/environment_server_robot.yaml
+++ b/srs_env_model/config/environment_server_robot.yaml
@@ -11,7 +11,7 @@ ocmap_resolution: .025
 # Tree depth used for crawling. Zero means full tree
 ocmap_treedepth: 0
 
-# Interna and published octomap frame id
+# Internal and published octomap frame id
 ocmap_frame_id: "/map"
 
 # Probablility for a "hit" - or "occupied" (will be converted to logodds)
@@ -59,7 +59,6 @@ pointcloud_frame_skip: 1
 
 # Internal and published pointcloud frame id
 pointcloud_frame_id: "/head_cam3d_link"
-#pointcloud_frame_id: "/map"
 
 # Point cloud limits in z-axis - minimum
 pointcloud_min_z: 0.1 
