Black image publisher added

--- a/srs_user_tests/CMakeLists.txt
+++ b/srs_user_tests/CMakeLists.txt
@@ -29,4 +29,6 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
 
+rosbuild_add_executable(black_image_publisher ros/src/black_image_publisher.cpp)
+
 rosbuild_add_roslaunch_check(ros/launch ROBOT=cob3-3 ROBOT_ENV=ipa-apartment)
